--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="#concept">Concept</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Motivation</a>
+                        <a class="page-scroll" href="#motivation">Motivation</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">TBD</a>
@@ -86,18 +86,46 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">UrbanSense is...</h2>
                     <hr class="light">
-                    <p class="">...an urban sensing platform that aims to take advantage of the reach and regularity of public transportation to collect data about a city. The initial prototype will </p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Why</a>
+                    <p class="">...an urban sensing platform that aims to take advantage of the reach and regularity of public transportation to collect data about a city. Using a off-the-shelf microcontrollers for computation, Bluetooth Low Energy for communication, and machine learning for analysis, we created a modular system that can seamlessly integrate arbitrary sensor functions through hardware peripherals.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section class="" id="motivation">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 text-center">
+                    <a href="img/portfolio/m1.jpg" class="portfolio-box">
+                        <img src="img/portfolio/m1.jpg" class="img-responsive" alt="">
+                        
+                    </a>
+                </div>
+                <div class="col-md-7 text-center vcenter">
+                    <h2 class="section-heading">Motivation</h2>
+                    <hr class="light">
+                    <p class="">Local governments are more and more starting to rely on data to drive their investment decisions in infrastructure, public transit, and real estate. However, current offerings offer fragmented solutions, often involving expensive infrastructure costs</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <p class="">Our product consolidates a suite of sensors and functions into a set of compact devices able to leverage existing public transportation to gather information about the city. See below for some examples of sensors... </p>
+            </div>
+        </div>
+    </aside>
+
+    <section id="services" class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Sensors + Functions</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -106,30 +134,30 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <i class="fa fa-4x fa-road text-primary sr-icons"></i>
+                        <h3>Pothole Detection</h3>
+                        <p class="text-muted">An IR depth sensor + accelerometer detect potholes and irregularities in roads</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <i class="fa fa-4x fa-users text-primary sr-icons"></i>
+                        <h3>Passenger Volume</h3>
+                        <p class="text-muted">A door-mounted IR sensor measures passenger departure and dispersion at each bus stop</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <i class="fa fa-4x fa-cloud text-primary sr-icons"></i>
+                        <h3>Air Quality</h3>
+                        <p class="text-muted">Rooftop particle sensors measure air pollution and the existance of toxic chemicals.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <i class="fa fa-4x fa-microphone text-primary sr-icons"></i>
+                        <h3>Noise Pollution</h3>
+                        <p class="text-muted">A rooftop sound detector captures the noise levels in different parts of the city.</p>
                     </div>
                 </div>
             </div>
@@ -233,14 +261,7 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside>
+    
 
     <section id="contact">
         <div class="container">
@@ -277,7 +298,119 @@
     <script src="js/creative.min.js"></script>
 
      <!-- Particle JS -->
-    <script src="js/particles.min.js"></script>    
+    <script src="js/particles.min.js"></script>   
+    <script type="text/javascript">
+        particlesJS("particles-js", {
+          "particles": {
+            "number": {
+              "value": 90,
+              "density": {
+                "enable": true,
+                "value_area": 800
+              }
+            },
+            "color": {
+              "value": "#ffffff"
+            },
+            "shape": {
+              "type": "circle",
+              "stroke": {
+                "width": 0,
+                "color": "#000000"
+              },
+              "polygon": {
+                "nb_sides": 5
+              },
+              "image": {
+                "src": "img/github.svg",
+                "width": 100,
+                "height": 100
+              }
+            },
+            "opacity": {
+              "value": 0.5,
+              "random": false,
+              "anim": {
+                "enable": false,
+                "speed": 1,
+                "opacity_min": 0.1,
+                "sync": false
+              }
+            },
+            "size": {
+              "value": 3,
+              "random": true,
+              "anim": {
+                "enable": false,
+                "speed": 40,
+                "size_min": 0.1,
+                "sync": false
+              }
+            },
+            "line_linked": {
+              "enable": true,
+              "distance": 200,
+              "color": "#ffffff",
+              "opacity": 0.4,
+              "width": 1
+            },
+            "move": {
+              "enable": true,
+              "speed": 6,
+              "direction": "none",
+              "random": false,
+              "straight": false,
+              "out_mode": "out",
+              "bounce": false,
+              "attract": {
+                "enable": false,
+                "rotateX": 600,
+                "rotateY": 1200
+              }
+            }
+          },
+          "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+              "onhover": {
+                "enable": true,
+                "mode": "grab"
+              },
+              "onclick": {
+                "enable": true,
+                "mode": "push"
+              },
+              "resize": true
+            },
+            "modes": {
+              "grab": {
+                "distance": 140,
+                "line_linked": {
+                  "opacity": 1
+                }
+              },
+              "bubble": {
+                "distance": 400,
+                "size": 40,
+                "duration": 2,
+                "opacity": 8,
+                "speed": 3
+              },
+              "repulse": {
+                "distance": 200,
+                "duration": 0.4
+              },
+              "push": {
+                "particles_nb": 4
+              },
+              "remove": {
+                "particles_nb": 2
+              }
+            }
+          },
+          "retina_detect": true
+        });
+    </script> 
 
 </body>
 
