--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                         <a class="page-scroll" href="#motivation">Motivation</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">TBD</a>
+                        <a class="page-scroll" href="#requirements">Tech Requirements</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">TBD</a>
+                        <a class="page-scroll" href="#competition">Competition</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                 </ul>
             </div>
@@ -164,7 +167,7 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="requirements">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
@@ -262,7 +265,76 @@
     </section>
 
     
+    <section id="competition" class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Competitive Analysis</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!--
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -281,7 +353,107 @@
                 </div>
             </div>
         </div>
+    </section> 
+    -->
+
+    <section id="team" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Team Members</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-md-offset-2 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-md-offset-2 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <div class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Category
+                                    </div>
+                                    <div class="project-name">
+                                        Project Name
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-muted">Competition</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="row">
+                <div class="text-center col-md-12">
+                    <h4>Made with <i class="fa fa-heart red"></i> for 18-549: Embedded Systems Capstone Design at CMU</h4>
+                </div>
+            </div>
+        </div>
+    </aside>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
