Technical Requirements section

--- a/index.html
+++ b/index.html
@@ -167,98 +167,259 @@
         </div>
     </section>
 
+    <section id="services" class="no-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Technical Requirements</h2>
+                    <p>2.4 GHz BLE + 2.4 GHz Wifi</p>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="no-padding">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Software</h2>
+                </div>
+            </div>
+            <div class="row no-gutter">
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/s1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Flask (v0.12)
+                            </div>
+                            <div class="project-category text-faded">
+                                 Open Source Python Web Server
+                                 <br>
+                                 Lightweight low dependancies
+                                 <br>
+                                 <a href="http://flask.pocoo.org/" target="_blank" class="btn btn-primary btn-small">
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/s2.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                PostgreSQL Server
+                            </div>
+                            <div class="project-category text-faded">
+                                 Python-supported ORM
+                                 <br>
+                                 Community Support
+                                 <br>
+                                 <a href="https://www.postgresql.org/" target="_blank" class="btn btn-primary btn-small">
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/s4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Ubuntu 16.04
+                            </div>
+                            <div class="project-category text-faded">
+                                 Supports ARM processors (RPi)
+                                 <br>
+                                 Open Source + Community Package Support
+                                 <br>
+                                 <a href="https://wiki.ubuntu.com/ARM/RaspberryPi" target="_blank" class="btn btn-primary btn-small">
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/s3.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                AWS EC2
+                            </div>
+                            <div class="project-category text-faded">
+                                 Student Discount Cloud Hosting
+                                 <br>
+                                 PostgresQL + Flask support
+                                 <br>
+                                 <a href="https://aws.amazon.com/" target="_blank" class="btn btn-primary btn-small">
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="no-padding" id="requirements">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Hardware</h2>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
+            </div>
+            <div class="row no-gutter">
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Raspberry Pi 3
+                            </div>
+                            <div class="project-category text-faded">
+                                 1.2GHz 64-bit ARMv8 processor
+                                 BCM43143 WiFi chip<br>
+                                 Built-In BLE Support
+                                 <br>
+                                 <a href="https://www.adafruit.com/products/3055" target="_blank" class="btn btn-primary btn-small">
+                                    $39.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/2.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                3-Axis Accelerometer
+                            </div>
+                            <div class="project-category text-faded">
+                                 3-Axis with Selectable Measurement Range
+                                 Ultra Low Power
+                                 <br>
+                                 SPI Digital Interface
+                                 <br>
+                                 High Resolution: 1 mg/LSB
+                                 <a href="https://www.sparkfun.com/products/11446" target="_blank" class="btn btn-primary btn-small">
+                                    $14.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/3.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Sound Detector
+                            </div>
+                            <div class="project-category text-faded">
+                                 Analog Amplitude Output
+                                 <br>
+                                 Binary Sound Indication
+                                 <br>
+                                 Digital Pinout
+                                 <br>
+                                 <a href="https://www.sparkfun.com/products/12642" target="_blank" class="btn btn-primary btn-small">
+                                    $10.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                GPS + RTC Breakout
+                            </div>
+                            <div class="project-category text-faded">
+                                 -165 dBm sensitivity, 10 Hz updates, 66 channel
+                                 <br>
+                                 Built-In Coin-cell RTC
+                                 <br>
+                                 Built-in datalogging
+                                 <br>
+                                 <a href="https://www.adafruit.com/products/746" target="_blank" class="btn btn-primary btn-small">
+                                    $39.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
+            </div>
+            <div class="row no-gutter">
+                <div class="col-lg-2 col-sm-6 portfolio-box">
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/5.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Optical Dust Sensor
+                            </div>
+                            <div class="project-category text-faded">
+                                 11mA current consumption
+                                 <br>
+                                 Detects toxic/non-toxic particles
+                                 <br>
+                                 Output density 0.5V/0.1mg/m3
+                                 <a href="https://www.sparkfun.com/products/9689" target="_blank" class="btn btn-primary btn-small">
+                                    $11.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/6.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Long-Range IR Sensor
+                            </div>
+                            <div class="project-category text-faded">
+                                 Output: .8V at 15cm to 0.4V at 150cm
+                                 <br>
+                                 Supply Voltage 4.5 and 5.5VDC
+                                 <br>
+                                 <br>
+                                 <a href="https://www.sparkfun.com/products/8958" target="_blank" class="btn btn-primary btn-small">
+                                    $14.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 portfolio-box">
+                    <img src="img/portfolio/fullsize/7.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                LightBlue Bean
+                            </div>
+                            <div class="project-category text-faded">                           
+                                 Atmega328p microprocessor
+                                 <br>
+                                 LBM313 Bluetooth Low Energy
+                                 <br>
+                                 8 MHz clock speed
+                                 <br>
+                                 <a href="https://www.adafruit.com/product/2732" target="_blank" class="btn btn-primary btn-small">
+                                    $39.95 <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -528,7 +689,7 @@
             },
             "move": {
               "enable": true,
-              "speed": 6,
+              "speed": 3,
               "direction": "none",
               "random": false,
               "straight": false,
