--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                         <a class="page-scroll" href="#motivation">Motivation</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#requirements">Tech Requirements</a>
+                        <a class="page-scroll" href="#tech">Technical Specifications</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#competition">Competition</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#requirements">Requirements</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -167,11 +170,11 @@
         </div>
     </section>
 
-    <section id="requirements" class="no-padding">
+    <section id="tech" class="no-padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Technical Requirements</h2>
+                    <h2 class="section-heading">Technical Specifications</h2>
                     <p>2.4 GHz BLE + 2.4 GHz Wifi</p>
                     <hr class="primary">
                 </div>
@@ -467,7 +470,7 @@
         </div>
     </section>
 
-    <section id="competition" class="">
+    <section id="requirements" class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
