Add final report

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h1 id="homeHeading">UrbanSense</h1>
                 <hr>
                 <p>Smarter, Data Driven, Cities</p>
-                <a href="#concept" class="btn btn-primary btn-xl page-scroll">Learn More</a>
+                <a href="files/FinalReport.pdf" class="btn btn-primary btn-xl">Download Final Report</a>
             </div>
         </div>
     </header>
